# hard-drive-manager

./: .gitignore  .gitignore   CMakeLists.txt  Dockerfile  ai_model.py  drive_health.json  drive_logs.db  package-lock.json  simulate_project.sh  start_backend.sh  start_backend_.sh  websocket_server
.github/workflows/: ci.yml
ai-env/: pyvenv.cfg
api/: app.py  app_.py  app_old.py  detailed_health_api.py
backend/: CMakeLists.txt  CMakeLists_.txt  websocket_server  websocket_server.cpp
backend/include/: ai_recommendation.h  drive_cloning.h  drive_detection.h  drive_health_monitor.h  drive_info.h  drive_repair.h  logging_reporting.h  partitioning_formatting.h  scanning.h
backend/src/: ai_recommendation.cpp  drive_cloning.cpp  drive_detection.cpp  drive_detection_.cpp  drive_health_monitor.cpp  drive_repair.cpp  health_monitor_full.cpp  health_monitor_main.cpp  logging_reporting.cpp  main.cpp  main_old.cpp  partitioning_formatting.cpp  scanning.cpp
backend/tests/: ai_recommendation_test.cpp  drive_cloning_test.cpp  drive_detection_test.cpp  drive_health_monitor_test.cpp  drive_repair_test.cpp  partitioning_formatting_test.cpp  scanning_test.cpp  test_helper.h
database/: db.sqlite
docs/: README.md
frontend/: .env  index.html  package-lock.json  package.json  script.js  style.css  tailwind.config.js
frontend/components/: Dashboard.jsx
frontend/src/: App.js  App.jsx  App_old.js  ErrorBoundary.jsx  index._oldjs  index.css  index.js
frontend/src/api/: apiClient.jsx  websocketClient.jsx
frontend/src/components/: Dashboard.jsx  DashboardCard.jsx  DashboardLayout.jsx  DashboardLayout0.jsx  DashboardLayout_.jsx  Dashboard_old.jsx  DetailedHealth.jsx  DriveCard.js  DriveCard0.jsx  DriveCard_.jsx  DriveCards_.jsx  DriveHealth.jsx  DriveHealth_.jsx  HealthDetails.jsx  Modal.jsx  RealTimeUpdates.jsx  RecommendationPage.jsx  ToggleSwitch_.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: Dashboard.js  DriveDetails.js  Reports.js
